<resources>
    <string name="app_name">Calculadora</string>
    <string name="buttonDeleteString"><![CDATA[<]]></string>
    <string name="buttonExclamationMarkString">!</string>
    <string name="buttonQuestionMarkString">?</string>
    <string name="button4String">4</string>
    <string name="button5String">5</string>
    <string name="button6String">6</string>
    <string name="buttonNumberSignString">#</string>
    <string name="button1String">1</string>
    <string name="button2String">2</string>
    <string name="button3String">3</string>
    <string name="buttonAditionString">+</string>
    <string name="button0String">0</string>
    <string name="buttonFloatString">.</string>
    <string name="buttonEqualsString">=</string>
    <string name="buttonCString">C</string>
    <string name="buttonDivisionString">/</string>
    <string name="button9String">9</string>
    <string name="button7String">7</string>
    <string name="button8String">8</string>
    <string name="buttonMultiplicationString">*</string>
    <string name="buttonSubtractionString">-</string>
    <string name="buttonDouble0String">00</string>
    <string name="calculator">Calculadora</string>
    <string name="operationDetails">Detalhes</string>
    <string name="history">Histórico</string>
    <string name="drawer_open">Aberto</string>
    <string name="drawer_close">Fechado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deleting">Deleting Operation</string>
    <string name="registry_saved">Operation Saved</string>
    <string name="deleting_error">Error Removing</string>
    <string name="lista_vazia">Lista Vazia</string>
    <string name="map">Mapa</string>
</resources>